@@ -250,12 +250,16 @@ Fixed bugs:
 
 * <get> would fetch files that were up to date, because it used > in a
   remote/local timestamp comparison, not >=. Bugzilla 35607.
-  
+
 * <xslt> passes the current file (name + directory) to the stylesheet/transformation.
   xsl-parameter name is configurable.  Bugzilla report 21042.
 
 Other changes:
 --------------
+
+* InputHandler implementations may now call InputRequest.getDefaultValue()
+  if they wish.
+
 * Took in bugzilla report 39320.
 
 * Improve compatibility with GNU Classpath and java versions prior to 1.5. Bugzilla 39027.
